--- a/example/package.json
+++ b/example/package.json
@@ -9,11 +9,13 @@
     "@material-ui/icons": "^3.0.1",
     "@material-ui/lab": "^3.0.0-alpha.22",
     "axios": "^0.18.0",
+    "jss": "^9.8.7",
     "jsx-to-string": "^1.4.0",
     "pearson-mui-theme": "link:..",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-jss": "^8.6.1",
     "react-markdown": "^4.0.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.4",
