--- a/example/package.json
+++ b/example/package.json
@@ -5,16 +5,17 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.2.0",
-    "@material-ui/icons": "^3.0.1",
+    "@material-ui/core": "^4.2.1",
+    "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^3.0.0-alpha.22",
+    "@material-ui/styles": "^4.2.1",
     "axios": "^0.18.0",
     "jss": "^9.8.7",
     "jsx-to-string": "^1.4.0",
     "pearson-mui-theme": "link:..",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
     "react-markdown": "^4.0.3",
     "react-router-dom": "^4.3.1",
