--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pearson-mui-theme",
-  "version": "0.0.4",
+  "version": "0.0.3",
   "description": "A Material UI theme implementing Pearson UX specs",
   "author": "Pearson-Higher-Ed",
   "license": "MIT",
@@ -22,13 +22,13 @@
     "deploy": "surge -p example/build -d pearson-theme.surge.sh"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.2.1",
+    "@material-ui/core": "^3.9.2",
     "prop-types": "^15.5.4",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react": "^15.0.0 || ^16.0.0",
+    "react-dom": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
-    "@material-ui/core": "^4.2.1",
+    "@material-ui/core": "^3.9.2",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
     "babel-plugin-external-helpers": "^6.22.0",
@@ -45,8 +45,8 @@
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-scripts": "^1.1.4",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
