--- a/example/package.json
+++ b/example/package.json
@@ -9,9 +9,10 @@
     "@material-ui/icons": "^3.0.1",
     "@material-ui/lab": "^3.0.0-alpha.22",
     "axios": "^0.18.0",
+    "clsx": "^1.0.4",
     "jss": "^9.8.7",
     "jsx-to-string": "^1.4.0",
-    "pearson-mui-theme": "link:..",
+    "pearson-mui-theme": "file:../../pearson-mui-theme",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -19,15 +20,17 @@
     "react-markdown": "^4.0.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.4",
-    "react-syntax-highlighter": "^9.0.1"
+    "react-syntax-highlighter": "^9.0.1",
+    "surge": "^0.21.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build; cp ./build/index.html ./build/200.html",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "surge -p ./build -d pearson-theme.surge.sh"
+    "predeploy": "npm run build",
+    "deploy": "surge -p ./build -d pearson-theme.surge.sh",
+    "logout": "surge logout"
   },
   "devDependencies": {
     "gh-pages": "^2.0.1"
